--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 <style>
-  :root{--bg:#faf9f7;--card:#ffffff;--accent:#5b8cff;--muted:#666;}
+  :root{--bg:#faf9f7;--card:#ffffff;--accent:#5b8cff;--muted:#666;--dice-size:96px;}
   html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,"Noto Sans TC",sans-serif;background:var(--bg);color:#111}
   .wrap{max-width:900px;margin:0 auto;padding:16px;display:flex;flex-direction:column;gap:12px}
   header{display:flex;align-items:center;gap:12px}
@@ -17,8 +17,30 @@
   .row{display:flex;gap:8px;align-items:center}
   input[type=text]{flex:1;padding:10px;border-radius:8px;border:1px solid #eee}
   button{background:var(--accent);color:white;border:none;padding:10px 12px;border-radius:8px;font-weight:600}
-  .board{display:grid;grid-template-columns:repeat(5,1fr);gap:6px;padding:8px;touch-action:manipulation}
-  .cell{background:#f6f7fb;border-radius:8px;min-height:54px;display:flex;align-items:center;justify-content:center;position:relative;font-weight:600;color:#333}
+  /* board: 每行 5 格，格子保持正方形 (responsive) */
+  .board{
+    display:grid;
+    grid-template-columns:repeat(5,1fr);
+    gap:6px;
+    padding:8px;
+    touch-action:manipulation;
+    align-items:stretch;
+  }
+  /* 每個格子維持正方形；文字與圖示置中 */
+  .cell{
+    background:#f6f7fb;
+    border-radius:8px;
+    aspect-ratio:1/1;           /* 讓格子保持正方形 */
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    position:relative;
+    font-weight:600;
+    color:#333;
+    overflow:hidden;
+    padding:6px;
+    box-sizing:border-box;
+  }
   .cell .idx{position:absolute;left:6px;top:4px;font-size:11px;color:var(--muted)}
   .pieces{display:flex;gap:6px;flex-wrap:wrap;justify-content:center}
   .piece{width:28px;height:28px;border-radius:50%;display:flex;align-items:center;justify-content:center;color:white;font-weight:700}
@@ -48,7 +70,6 @@
   }
 
   /* 3D Dice styles */
-  :root{--dice-size:96px;}
   #diceOverlay{
     display:none;
     position:absolute;
@@ -157,6 +178,22 @@
   .pendingActions button{ padding:10px 14px; border-radius:8px; border:none; font-weight:700 }
   .btn-cancel{ background:#9ca3af; color:#fff }
   .btn-confirm{ background:#3b82f6; color:#fff }
+
+  /* 格子標籤（cellLabel）樣式：置中、允許換行並以 JS 動態調整字體 */
+  .cellLabel{
+    position:absolute;
+    bottom:6px;
+    left:8px;
+    right:8px;
+    text-align:center;
+    font-size:14px;        /* 基準字體，會被 JS 縮放 */
+    color:var(--muted);
+    pointer-events:none;
+    white-space:normal;
+    overflow:hidden;
+    display:block;
+    line-height:1.1;
+  }
 </style>
 </head>
 <body>
@@ -940,6 +977,76 @@ pendingCancel.addEventListener('click', async ()=>{
   if(ownerId !== myId) return alert('只有房主可以取消等待。');
   try{ await roomRef.child('pendingAction').set(null); }catch(e){ console.warn(e); }
 });
+
+// ------- auto-fit labels helper (paste here) -------
+function debounce(fn, wait=120){
+  let t;
+  return (...args)=>{ clearTimeout(t); t = setTimeout(()=>fn(...args), wait); };
+}
+
+function fitLabelToBox(labelEl, maxFont = 14, minFont = 8){
+  if(!labelEl) return;
+  const cell = labelEl.closest('.cell');
+  if(!cell) return;
+
+  // reset to baseline
+  let font = maxFont;
+  labelEl.style.fontSize = font + 'px';
+  labelEl.style.lineHeight = '1.05';
+  labelEl.style.whiteSpace = 'normal';
+  labelEl.style.display = 'block';
+  labelEl.style.overflow = 'hidden';
+
+  // compute available area inside cell (account padding/border)
+  const cs = getComputedStyle(cell);
+  const padX = (parseFloat(cs.paddingLeft) || 0) + (parseFloat(cs.paddingRight) || 0);
+  const padY = (parseFloat(cs.paddingTop) || 0) + (parseFloat(cs.paddingBottom) || 0);
+  const availW = Math.max(4, cell.clientWidth - padX);
+  const availH = Math.max(4, cell.clientHeight - padY);
+
+  // shrink until fits or reach minFont
+  let iter = 0;
+  while(iter < 30){
+    // measurements after applied font
+    const overflowX = labelEl.scrollWidth > availW + 1;
+    const overflowY = labelEl.scrollHeight > availH + 1;
+    if(!overflowX && !overflowY) break;
+    font--;
+    if(font < minFont){ font = minFont; labelEl.style.fontSize = font + 'px'; break; }
+    labelEl.style.fontSize = font + 'px';
+    iter++;
+  }
+  labelEl.style.fontSize = font + 'px';
+}
+
+function adjustCellLabels(){
+  // schedule on next frame so layout has settled
+  requestAnimationFrame(()=>{
+    const labels = document.querySelectorAll('.cellLabel');
+    labels.forEach(l => fitLabelToBox(l, 14, 8));
+  });
+}
+
+// observe board mutations to refit labels when content or layout changes
+(function observeBoard(){
+  try{
+    const board = document.getElementById('board');
+    if(!board || !window.MutationObserver) return;
+    const obs = new MutationObserver(debounce(()=> adjustCellLabels(), 80));
+    obs.observe(board, { childList:true, subtree:true, characterData:true, attributes:true });
+  }catch(e){
+    console.warn('observeBoard failed', e);
+  }
+})();
+
+// re-fit on resize (debounced)
+window.addEventListener('resize', debounce(()=> adjustCellLabels(), 120));
+
+// ensure initial fit after page load and after initial buildBoard call
+window.addEventListener('load', ()=> setTimeout(adjustCellLabels, 80));
+// also call once now in case script runs after DOM ready
+setTimeout(adjustCellLabels, 120);
+// ------- end auto-fit labels helper -------
 </script>
 </body>
 </html>
